maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: too many arguments for method litMessage: ()String
  var marquage:Int=litMessage(x,y).toInt
                             ^